# gwyddion-fork

./: ARCHITECTURE.md
.svn/: wc.db
docs/: README.md  codebase-notes.md  file-format-table.md  python-migration-strategy.md  repository-and-forking.md
gwybatch/: Makefile  gwybatch.c
gwyddion/: NEWS  TODO.dn2010  TODO.yeti  configure.ac
gwyddion.net-doc-build/: fixme.pl  gendoc.sh
gwyddion/app/: Makefile.am  app.c  data-browser-aux.c  data-browser.c  data-browser.h  dialog.c  dialog.h  file.c  filelist.c  glmaterial-editor.c  gwyapp.h  gwyappfilechooser.c  gwymoduleutils-file.c  gwymoduleutils-file.h  gwymoduleutils-synth.c  gwymoduleutils-synth.h  gwymoduleutils.c  gwymoduleutils.h  gwyplaintool.c  gwyplaintool.h  gwyresultsexport.c  gwyresultsexport.h  gwytool.c  help.c  log.c  logging.c  meta.c  param-def.c  param-def.h  param-internal.h  param-resource.c  param-resource.h  param-table.c  param-table.h  params.c  params.h  resource-editor.c  settings.c  settings.h  undo.c  (+1 more)
gwyddion/data/: Makefile.am  gwyddion.nsit.in  gwyddion.spec.in  mingw-gwyddion-libs.spec.in
gwyddion/data/gradients/: Makefile.am  Painbow
gwyddion/devel-docs/: gwydoc-depscan  ncrosslinks.py
gwyddion/devel-docs/libgwyapp/: libgwyapp-docs.sgml
gwyddion/devel-docs/libgwymodule/: libgwymodule-docs.sgml
gwyddion/devel-docs/libgwyprocess/: libgwyprocess-docs.sgml
gwyddion/gwyddion/: about.c  gwyddion.c  toolbox-editor.c
gwyddion/libdraw/: Makefile.am  gwygradient.c  gwyselection.c
gwyddion/libgwyddion/: Makefile.am  gwycontainer.c  gwycontainer.h  gwyenum.c  gwyexpr.c  gwymath.c  gwymd5.c  gwymd5.h  gwynlfit.c  gwyomp.h  gwysiunit.c  gwysivalueformat.c  gwystringlist.c  gwythreads.c  gwyutils-string.c  gwyutils.c  gwyutils.h
gwyddion/libgwydgets/: Makefile.am  gwy3dlabel.c  gwy3dview.c  gwyadjustbar.c  gwyadjustbar.h  gwyaxis.c  gwycombobox.c  gwygraphcurvemodel.c  gwygraphmodel.c  gwyinventorystore.c  gwyinventorystore.h  gwynullstore.c  gwynullstore.h  gwystock.c  gwystock.h
gwyddion/libgwymodule/: Makefile.am  gwymodule-file.c  gwymodule-file.h
gwyddion/libprocess/: Makefile.am  brick.c  correct-laplace.c  datafield.c  filters-convdeconv.c  filters-minmax.c  filters.c  fractals.c  fractals.h  grains-disttrans.c  grains-values.c  grains-wshed.c  grains.c  gwyprocessinternal.h  gwyshapefitpreset.c  inttrans.c  lawn.c  level.c  mfm.c  spectra.c  spline.c  stats-acfpsdf.c  stats-entropy.c  stats-sum.c  stats.c  stats.h  stats_uncertainty.c  surface.c  surface.h
gwyddion/m4/: gwy-hdf5.m4
gwyddion/modules/cmap/: Makefile.am  cmap_crop.c  cmap_cutter.c  cmap_fdfit.c  cmap_lockin.c  cmap_polylevel.c  cmap_possearch.c  (+1 more)
gwyddion/modules/file/hdf5/: Makefile.am  datxfile.c  epflfile.c  ergofile.c  gwyhdf5.c  gwyhdf5.h  hdf5file.c  hdf5file.h  nsidfile.c  shilpsfile.c
gwyddion/modules/xyz/: Makefile.am  xyz_autocrop.c  xyz_crop.c  xyz_drift.c  xyz_level.c  xyz_raster.c  xyz_split.c  xyz_tcut.c  xyz_zdrift.c  xyzops.c
gwyddion/pixmaps/: Makefile.am
gwyddion/po/: cs.po  de.po  en_GB.po  es.po  fr.po  it.po  ja.po  ko.po
gwyddion/utils/: align-declarations.py  check-coding-style.py  check-dep-versions.py  convert-to-params.py  fix-translation-punct.py  flatten.py  gen-news.py  get-symbols.sh  gwyddion-build-log  gwyddion-night-build  updateappdataversion.sh
gwydump/: gwydump.c
gwyfract/: Makefile.am  configure.ac  gwyfract.c
gwyiew/: gwyiew.c
mingw32-cross-compile/: copysysfiles  cross-build-32  cross-build-64  expandnsi
mingw32-cross-compile/mingw-gdk-pixbuf/: gdk-pixbuf-gif-string-h.patch
mingw32-cross-compile/mingw-glib2/: mingw-glib2.spec
mingw32-cross-compile/mingw-gtk2/: gtk-fix-out-of-source-build.patch  gtk2-g-content-type-is-a-NULL.patch  gtk2-system-python.patch  gtk2-win32-openclipboard.patch
mingw32-cross-compile/mingw-gtksourceview2/: mingw-gtksourceview2.spec
mingw32-cross-compile/mingw-hdf5/: hdf5-szip-libname.patch
threshold-example/: threshold-example.c
user-guide/: README
user-guide/common/: dblatex.xsl  epilogue.tex  fixpngres.c  prologue.tex  user-guide.sty  xhtml.xsl  xml-extract.py  xmlunfold.py
user-guide/src/: build-log  fitfunc-exponential-acf.gpi  fitfunc-exponential-hhcf.gpi  fitfunc-exponential-rpsdf.gpi  fitfunc-gaussian-acf.gpi  fitfunc-gaussian.gpi  fitfunc-lorentzian.gpi  fitfunc-parabolic-step.gpi  fitfunc-power.gpi  fitfunc-sinc.gpi  fitfunc-square-wave.gpi  fitfunc-two-gaussians-psdf.gpi  night-build  style.gpi  windowing-fft.gpi  windowing-win.gpi
(+894 files in other folders)
